tests/build/fail/property/child_type_is_not_ui_node.stderr
error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
 --> $DIR/child_type_is_not_ui_node.rs:6:29
  |
6 | pub fn invalid_child(child: NotUiNode, input: bool) -> impl UiNode {
  |                             ^^^^^^^^^ the trait `UiNode` is not implemented for `NotUiNode`

error[E0308]: mismatched types
 --> $DIR/child_type_is_not_ui_node.rs:6:29
  |
6 | pub fn invalid_child(child: NotUiNode, input: bool) -> impl UiNode {
  |                             ^^^^^^^^^ expected struct `NotUiNode`, found type parameter `impl zero_ui::core::UiNode`
  |
  = note:      expected struct `NotUiNode`
          found type parameter `impl zero_ui::core::UiNode`
